# MapTheIsland

./: .gitignore  Architecture_Plan.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/: README.md
apps/web/: README.md  package.json  playwright.config.ts  tsconfig.json
docs/implementation/: README.md  architecture-traceability-matrix.md  control-plane-gitops-secrets-and-certs-baseline.md  engineering-standards-baseline.md  implementation-spec-baseline.md  local-dev-platform-target.md  open-implementation-gaps.md  platform-foundation-baseline.md  policy-taxonomy-and-safety-model.md  (+1 more)
infra/: README.md
libs/: README.md
pm/: 00_program_charter.md  01_architecture_constraints.md  02_delivery_operating_model.md  03_phase_plan.md  04_dependency_map.md  05_workstream_index.md  06_risk_register.md  07_decision_log.md  08_research_register.md  09_quality_gates.md  10_release_strategy.md  11_status_dashboard.md  12_change_log.md  13_glossary.md  14_artifact_inventory.md  15_non_functional_requirements.md  16_decision_boundaries.md  17_phase_interlocks.md  18_environment-and-promotion-model.md  19_milestone-evidence-packages.md  20_phase_exit_checklists.md  21_roles_and_responsibilities.md  22_cross_cutting_requirements.md  README.md
services/: README.md
tests/: conftest.py  test_ci_workflow.py  test_contract_models.py  test_evidence_models.py  test_gitops_control_plane_baseline.py  test_infra_baseline.py  test_local_dev_kind_baseline.py  test_local_dev_platform_baseline.py  test_policy_models.py  test_workspace_baseline.py
(+87 files in other folders)
